Regular update. Happy Spring Festival!

--- a/aboly.html
+++ b/aboly.html
@@ -652,8 +652,8 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
 <p><span class="lyterm">道（<span class="lypinyin">dǎo</span>）千乘（<span class="lypinyin">shèng</span>）之国</span>。<a id="dao3"></a><span class="lyterm">道</span>：通“导”，领导，治理，guide, lead。<span class="lyexample"><span>【例】</span><span><a href="#2.3" class="lyref">2.3</a> <span class="lyq">道之以政。</span></span></span></p>
-<p><a id="sheng4a"></a><span class="lyterm">乘</span>：<a href="#zhouchao">春秋</a>时配步兵的木制战车，又称革车，每辆通常由4匹马牵引（称为<a href="#si4">驷</a>），车上乘甲士3名，驾车者居中，车下配步兵72名。乘也可以指不配兵士，仅作交通工具的4马1车。</p>
-<p><a href="#zhouchao">战国</a>中期，机动灵活的骑射开始成为战车与步兵的强大补充。秦统一天下后，冲击力强但笨重难用的战车逐渐被淘汰。明清开始各种火器的应用，又使骑兵走向没落。</p>
+<p><a id="sheng4a"></a><span class="lyterm">乘</span>：<a href="#zhouchao">春秋</a>时配步兵的木制战车，又称革车，每辆通常由4匹马牵引（称为<a href="#si4">驷</a>），车上乘甲士3名，驾车者居中，车下配步兵72名。乘也可以指不配兵士，仅作交通工具的4马1车。这时的马是车乘的附属，还未成为坐骑。<a href="#6.4" class="lyref">6.4</a> <span class="lyq">乘肥马</span>，<a href="#6.15" class="lyref">6.15</a> <span class="lyq">策其马</span>，<a href="#15.26" class="lyref">15.26</a> <span class="lyq">有马者借人乘之</span>，乘坐的都是车。</p>
+<p><a href="#zhouchao">战国</a>中期，由赵武灵王倡导，机动灵活的骑射开始成为战车与步兵的强大补充。秦统一天下后，冲击力强但笨重难用的战车逐渐被淘汰。明清开始，各种火器的应用又使骑兵走向没落。</p>
 <p><a id="bingyi"></a>按<a href="#zhouchao">周</a>制，每576家（64 <a href="#jingtianzhi">井</a>）百姓负责配齐一乘兵车及其步兵与装备。<span class="lyterm">千乘之国</span>就是用兵力来衡量国力的强弱。<a id="qianli"></a><a href="#tianzi">天子</a><a href="#wangji">畿</a>内<a href="#fang1a">地方</a>千里（即纵隔各千里，<a id="li3b"></a>每300 <a href="#bu4">步</a>为1 <span class="lykeyword">里</span>，约合414米），出兵车万乘，<a href="#zhuhou">诸侯</a>地方50里至数百里，出兵车千乘，<a id="fuyong"></a>不足50里者则为附庸，因此天子也称“万乘之尊”。</p>
 <p>然而东周时王室衰微，诸侯间征伐兼并，制度常为<a href="#juwen">具文</a>。前314年齐伐燕大胜，齐宣王称之为<span class="lyq">以万乘之国伐万乘之国</span>（《孟子·梁惠王下》），东汉赵岐注曰：<span class="lyq">侵地广大，<a href="#jian4a">僭</a>号称王，故曰万乘</span>。《战国策》刘向书录也说，战国末期<span class="lyq">万乘之国七、千乘之国五</span>。在七雄纷争的舞台上，<a href="#xizhouguo">西周国</a>、东周国就仅余千乘自保了。</p>
 <a id="diwang"></a><div class="lyseealso">
@@ -1033,7 +1033,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#2.14">2.14</a></div>
 <div class="lybloboriginaltext"><p>子曰：“君子周而不比，小人比而不周。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="zhou2"></a><span class="lyterm">周</span>：本义为周到细密，引申为亲密。</p></li>
+<li><p><a id="zhou1a"></a><span class="lyterm">周</span>：周到细密，引申为亲密。</p></li>
 <li><p><a id="bi3"></a><span class="lyterm">比</span>：本义为二人并肩齐行，引申为亲近，这里指勾结，偏私。</p></li>
 </ul></div>
 </div>
@@ -2114,9 +2114,12 @@ img.characterimg {
 <p><span class="lyterm">秉</span>（<span class="lypinyin">bǐng</span>）：古代容量单位，合25釜。<span class="lyterm">五秉</span>约合1个人10年的口粮（当然还应考虑其它方面的消费需要）。作为比较，《史记·孔子世家》载，孔子任鲁司寇时的年俸是粟6万斗，合375秉。</p>
 </li>
 <li><p><a id="shi4b"></a><span class="lyterm">适</span>：前往，去往。<span class="lyexample"><span>【例】</span><span><a href="#9.30" class="lyref">9.30</a> <span class="lyq">可与共学，未可与适道。</span>《诗经·魏风·硕鼠》：<span class="lyq">逝将去女，适彼乐土。</span></span></span></p></li>
-<li><p><span class="lyterm">乘肥马</span>：指乘坐肥马拉的高车，而非直接骑在马上。</p></li>
-<li><p><span class="lyterm">衣（<span class="lypinyin">yì</span>）轻裘</span>：穿着轻暖的皮衣。<span class="lyterm">衣</span>：动词，穿着。<a href="#5.26" class="lyref">5.26</a>  的“衣轻裘”则是名词，古注有认为应作“衣裘”。</p></li>
-<li><p><span class="lyterm">周</span>：救济，补贴不足。<span class="lyterm">继</span>：增加，接续。<span class="lyseealso"><span>【参】</span><span>《汉书·疏广传》载，疏广作为汉宣帝的太子太傅告老退休时，宣帝<span class="lyq">加赐黄金二十斤，皇太子赠以五十斤</span>。疏广回乡后，每日宴请<span class="lyq">族人故旧宾客</span>，散财唯恐不快。有劝其多为子孙置买田宅产业，<span class="lyq">广曰：“吾岂老悖不念子孙哉？顾自有旧田庐，令子孙勤力其中，足以共衣食，与凡人齐。今复增益之以为赢余，但教子孙怠惰耳。贤而多财则损其志，愚而多财则益其过。且夫富者，众人之怨也；吾既亡以教化子孙，不欲益其过而生怨。”</span>在现代，公益基金会是善用余财回报社会的典型方式，可以参考资中筠著《财富的归宿：美国现代公益基金会述评》。</span></span></p></li>
+<li>
+<p><span class="lyterm">乘肥马</span>：指乘坐肥壮的骏马所拉的<a href="#sheng4a">车乘</a>，而非直接骑在马上。</p>
+<p><span class="lyterm">衣（<span class="lypinyin">yì</span>）轻裘</span>：穿着轻暖的皮衣。<span class="lyterm">衣</span>：动词，穿着。<a href="#5.26" class="lyref">5.26</a>  的“衣轻裘”则是名词，古注有认为应作“衣裘”。</p>
+<p>后来有成语“肥马轻裘”，形容生活富裕奢华，简称“轻肥”。<span class="lyexample"><span>【例】</span><span>元代李元圭《梁溪留别虞彦高》：<span class="lyq"><a href="#yeren">野人</a>情旷达，志不在轻肥。</span></span></span></p>
+</li>
+<li><p><span class="lyterm">周</span>：救济，补贴不足。<span class="lyterm">继</span>：增加，<a href="#fuyi">附益</a>有余。<span class="lyseealso"><span>【参】</span><span>《汉书·疏广传》载，疏广作为汉宣帝的太子太傅告老退休时，宣帝<span class="lyq">加赐黄金二十斤，皇太子赠以五十斤</span>。疏广回乡后，每日宴请<span class="lyq">族人故旧宾客</span>，散财唯恐不快。有劝其多为子孙置买田宅产业，<span class="lyq">广曰：“吾岂老悖不念子孙哉？顾自有旧田庐，令子孙勤力其中，足以共衣食，与凡人齐。今复增益之以为赢余，但教子孙怠惰耳。贤而多财则损其志，愚而多财则益其过。且夫富者，众人之怨也；吾既亡以教化子孙，不欲益其过而生怨。”</span>在现代，公益基金会是善用余财回报社会的典型方式，可以参考资中筠著《财富的归宿：美国现代公益基金会述评》。</span></span></p></li>
 </ul></div>
 </div>
 <a id="6.5"></a><div class="lyblob">
@@ -2217,7 +2220,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">孟之反</span>：即鲁国大夫孟之侧，反是他的<a href="#chenghu">字</a>。</p></li>
 <li><p><span class="lyterm">奔而殿</span>：败退的时候留在队伍最后（打掩护）。<span class="lyterm">殿</span>：位于军队最后，后来泛指在后；又指末等，与“最”相对；或指最后的杰出者。<span class="lyexample"><span>【例】</span><span>“殿后”可以单纯指位置在后，也可表示掩护大部队先撤。在考试、竞赛中，“殿军”指倒数第一，或合格入选的最后一名。《后汉书·百官一》：<span class="lyq">岁尽即奏其殿最而行赏罚。</span>晚清陈三立曾被誉为<span class="lyq">有清诗人之殿，亦旧诗之殿</span>。</span></span></p></li>
-<li><p><a id="ce4"></a><span class="lyterm">策</span>：本义为握在手里赶马快走的鞭棒（西方则使用装在靴后跟的马刺，spur），这里作动词。当时孟之反是抽出一支箭来赶马的。<span class="lyexample"><span>【例】</span><span>韩愈《马说》：<span class="lyq">策之不以其道，食之不能尽其材，鸣之而不能通其意，执策而临之曰：“天下无马！”</span></span></span></p></li>
+<li><p><a id="ce4"></a><span class="lyterm">策</span>：本义为握在手里赶马快走的鞭棒（西方骑士则使用装在靴后跟的马刺，spur），这里作动词。当时孟之反是抽出一支箭来赶马的。<span class="lyexample"><span>【例】</span><span>韩愈《马说》：<span class="lyq">策之不以其道，食之不能尽其材，鸣之而不能通其意，执策而临之曰：“天下无马！”</span></span></span></p></li>
 </ul>
 </div>
 </div>
@@ -2811,7 +2814,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#zengshen">曾子</a>曰：“以能问于不能，以多问于寡，有若无，实若虚，犯而不校。昔者吾友尝从事于斯矣。”</p></div>
 <div class="lyblobannotation">
 <p>古注多认为，本章是曾参对早逝的师兄<a href="#yanhui">颜回</a>的追思。</p>
-<ul class="lyblobitemize"><li><p><span class="lyterm">犯而不校</span>（<span class="lypinyin">jiào</span>）：受到冒犯也不计较。这里的<span class="lyterm">校</span>是从校订、核对、比较的意义引申来的，即考量得失。</p></li></ul>
+<ul class="lyblobitemize"><li><p><span class="lyterm">犯而不校</span>（<span class="lypinyin">jiào</span>）：受到冒犯也不计较。这里的<span class="lyterm">校</span>是从校订、核对、比较的意义引申来的，即考量得失利害。</p></li></ul>
 <p><span class="lyseealso"><span>【参】</span><span>《资治通鉴·唐太宗贞观三年》（629年）载，唐太宗问孔颖达本章之意，孔颖达回答又后补充说：<span class="lyq">非独<a href="#pifu">匹夫</a>如是，帝王亦然。帝王内蕴神明，外当玄默，故《<a href="#yijing">易</a>》称：“以蒙养正，以明夷<a href="#li4">莅</a>众。”若位居尊极，炫耀聪明，以才<a href="#ling2">陵</a>人，<a href="#zhou">饰非拒谏</a>，则下情不通，取亡之道也。</span>（玄默：沉静寡言。蒙、明夷是《周易》的两卦，所引句出自明夷卦王弼注。蒙：稚，意指少者应诚心循序求学。明<a href="#yi2">夷</a>：光明损敛，意指上位者不宜显明蔽众，而应<a href="#wuweierzhi">无为</a>而化。）</span></span></p>
 </div>
 </div>
@@ -3454,8 +3457,8 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#10.9">10.9</a></div>
 <div class="lybloboriginaltext"><p>祭于公，不宿肉。祭肉不出三日，出三日不食之矣。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">祭于公</span>：指参加公祭，即国君主持的祭礼。<a id="jirou"></a>这种祭祀在第一天清晨宰杀牲畜用于献祭，第二天祭祀完成后，会根据助祭官员的品级颁赐祭肉（也称胙（<span class="lypinyin">zuò</span>）肉），作为神灵或祖先降福的圣食。后面的<span class="lyterm">祭肉</span>则指家祭中分得的祭肉。</p></li>
-<li><p><span class="lyterm">不宿肉</span>：不把分到的祭肉放过夜（就应吃完）。</p></li>
+<li><p><span class="lyterm">祭于公</span>：指参加公祭，即国君主持的祭礼。<a id="jirou"></a>这种祭祀在第一天清晨宰杀牲畜用于献祭，第二天祭祀完成后，会根据助祭官员的品级颁赐祭肉（也称胙（<span class="lypinyin">zuò</span>）肉），作为神灵或祖先降福的圣食。</p></li>
+<li><p><span class="lyterm">不宿肉</span>：不把分到的祭肉放过夜（就应吃完）。后面的<span class="lyterm">祭肉</span>指家祭中分得的祭肉。</p></li>
 </ul></div>
 </div>
 <a id="10.10"></a><div class="lyblob">
@@ -3638,7 +3641,7 @@ img.characterimg {
 <li>
 <p><a id="yeren"></a><span class="lyterm">野人</span>：乡野之人，引申为平民，没有官职俸禄的人。</p>
 <p><a id="ye3"></a><span class="lyterm">野</span>：郊外，远离城邑的乡村。按《周礼·春官宗伯·肆师》郑玄注，城外50 <a href="#li3b">里</a>为近郊，100里为远郊，郊之外即为野。</p>
-<p><a id="guoren"></a>与野人相对的是<span class="lykeyword"><a href="#guo2">国</a>人</span>，即城里人，享有一定的参政议政权。</p>
+<p><a id="guoren"></a>与野人相对的是<span class="lykeyword"><a href="#guo2">国</a>人</span>，即城里人，享有一定的参政议政权。后来，野人又用作知识分子的自我谦称，表示自己鄙陋不文、无官无职或者无意仕途，实则暗含着“先进于礼乐”的自信。</p>
 </li>
 </ul></div>
 </div>
@@ -3779,7 +3782,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">周公</span>：指当时在任的世袭周公，而不是周公旦。</p></li>
 <li>
-<p><span class="lyterm">附</span>、<span class="lyterm"><a href="#sunyi">益</a></span>：都是增加的意思。附的这个意义来自附着，append；益是“溢”的本字。<span class="lyexample"><span>【例】</span><span>韩愈《集贤院校理石君墓志铭》：<span class="lyq">行益修，学益进，交游益附，声号闻<a href="#sihai">四海</a>。</span>（这里的益是副词，更加。）</span></span></p>
+<p><a id="fuyi"></a><span class="lyterm">附</span>、<span class="lyterm"><a href="#sunyi">益</a></span>：都是增加的意思。附的这个意义来自附着，append；益是“溢”的本字。<span class="lyexample"><span>【例】</span><span>韩愈《集贤院校理石君墓志铭》：<span class="lyq">行益修，学益进，交游益附，声号闻<a href="#sihai">四海</a>。</span>（这里的益是副词，更加。）</span></span></p>
 <p><span class="lyterm">聚敛而附益</span>是指前484年，<a href="#jikangzi">季康子</a>欲改口赋为田赋一事。</p>
 <ul>
 <li><p><a id="jingtianzhi"></a>西周时土地为国有，赋税实行<span class="lykeyword">井田制</span>，由国家划定：100 <a href="#bu4">步</a>见方为一<span class="lykeyword">亩</span>地，每900亩耕地划成3×3块的井字形，为一<span class="lykeyword">井</span>。<a href="#wangji">王畿</a>内实行<span class="lykeyword">贡法</span>，由9家耕种一井，每家一块，按收成的1/10交税；诸侯国实行<span class="lykeyword">助法</span>，由8家耕种一井，每家也各得一块，中央一块为公田，8家合种，公田的收成作为赋税。井田制相当于按人收税，即<span class="lykeyword">口赋</span>。</p></li>
@@ -4051,7 +4054,8 @@ img.characterimg {
 </li>
 <li><p><a id="shier"></a><span class="lyterm">二</span>：什（<span class="lypinyin">shí</span>）二，十分之二的简称，指逢十抽二的税率。参见 <a href="#11.17" class="lyref">11.17</a>  所注<a href="#chushuimu">初税亩</a>。<span class="lyexample"><span>【例】</span><span>《史记·苏秦列传》：<span class="lyq">治产业，力工商，逐什二以为务。</span>（指20%的利润率。）</span></span></p></li>
 <li>
-<p><span class="lyterm">君<a href="#shu2">孰</a>与不足？</span>：国君会受谁的拖累而不富足呢？<span class="lyterm">孰与</span>：“与孰”的倒装，和谁一起，被谁连带着，指遭受拖累或跟着沾光。<span class="lyterm">孰</span>常用于语气强烈的反问句。<span class="lyexample"><span>【例】</span><span>陆机《赠冯文罴（<span class="lypinyin">pí</span>）迁斥丘令》：<span class="lyq">非子之念，心孰为悲？</span></span></span>孰与更常用于前后两项的比较。<span class="lyexample"><span>【例】</span><span>《战国策·齐策一·邹忌修八尺有余》：<span class="lyq">吾孰与城北徐公美？</span></span></span></p>
+<p><span class="lyterm">君<a href="#shu2">孰</a>与不足？</span>：国君会受谁的拖累而不富足呢？<span class="lyterm">孰与</span>：“与孰”的倒装，和谁一起，被谁连带着，指遭受拖累或跟着沾光。</p>
+<p>“孰”常用于语气强烈的反问句。<span class="lyexample"><span>【例】</span><span>陆机《赠冯文罴（<span class="lypinyin">pí</span>）迁斥丘令》：<span class="lyq">非子之念，心孰为悲？</span></span></span>“孰与”更常用于前后二者的比较。<span class="lyexample"><span>【例】</span><span>《战国策·齐策一·邹忌修八尺有余》：<span class="lyq">吾孰与城北徐公美？</span>《说苑·建本》：<span class="lyq">秉烛之明，孰与昧行乎？</span></span></span></p>
 <p><span class="lyseealso"><span>【参】</span><span>《韩诗外传》第10卷第22章：<span class="lyq">王者藏于天下，诸侯藏于百姓，农夫藏于囷庾，商贾藏于<a href="#quqie">箧</a>匮。</span>（藏：指藏富。囷庾（<span class="lypinyin">qūn yǔ</span>）：粮仓。匮：通“柜”。）《魏书·太宗纪》载，415年北魏<span class="lyq">频遇霜旱，年谷不登</span>，明元帝拓跋嗣下诏开仓赈济贫民，开头说：<span class="lyq">古人有言，百姓足则君有余，未有民富而国贫者也</span>，可能就是化用的本章。</span></span></p>
 </li>
 </ul></div>
@@ -6235,7 +6239,7 @@ img.characterimg {
 <li><p><span class="lyterm">朕</span>（<span class="lypinyin">zhèn</span>）：我。自秦始皇统一天下起，它才成为天子专用的自称。</p></li>
 <li><p><span class="lyterm">无以万方</span>：（请）不要罪及天下众人。<span class="lyterm">以</span>：及，连及，这个意义较古。<span class="lyterm">万方</span>：万邦，<a href="#tianxia">天下</a>各地。<span class="lyterm">方</span>：殷周时对邦国的称谓。<span class="lyexample"><span>【例】</span><span>《尚书·周书·多方》：<span class="lyq">告尔<a href="#siguo">四国</a>多方。</span></span></span></p></li>
 <li><p><span class="lyterm">赉</span>（<span class="lypinyin">lài</span>）：赏赐。<span class="lyexample"><span>【例】</span><span>《诗经·商颂·烈祖》：<span class="lyq">既载清酤，赉我思成。</span>（载：陈列（祭品）。酤（<span class="lypinyin">gū</span>）：酒。思：无意义的助词。）</span></span></p></li>
-<li><p><span class="lyterm"><a href="#zhou2">周</a>亲</span>：至亲。<span class="lyterm">虽有周亲</span>句是<a href="#wu">周武王</a>说的，见于《尚书·周书·泰誓中》（伪），是<a href="#wu">周武王</a>出兵伐<a href="#zhou">纣</a>的誓师词。本句接在<span class="lyq">予有<a href="#luanchen">乱臣</a>十人，同心同德</span>之后。<span class="lyterm">百姓有过</span>之前还有：<a id="tianshitianting"></a><span class="lyq">天视自我民视，天听自我民听。</span></p></li>
+<li><p><span class="lyterm"><a href="#zhou1a">周</a>亲</span>：至亲。<span class="lyterm">虽有周亲</span>句是<a href="#wu">周武王</a>说的，见于《尚书·周书·泰誓中》（伪），是<a href="#wu">周武王</a>出兵伐<a href="#zhou">纣</a>的誓师词。本句接在<span class="lyq">予有<a href="#luanchen">乱臣</a>十人，同心同德</span>之后。<span class="lyterm">百姓有过</span>之前还有：<a id="tianshitianting"></a><span class="lyq">天视自我民视，天听自我民听。</span></p></li>
 <li><p><span class="lyterm">谨权量（<span class="lypinyin">liáng</span>），审法度，修废官</span>：严谨明细地制定度量衡标准，整顿恢复荒废的职能部门。<span class="lyterm">权量</span>：称重量与测体积的工具，代指度量衡标准。<span class="lyterm">法度</span>也指度量衡，而非法律制度。<span class="lyseealso"><span>【参】</span><span>《汉书·律历志》引用了这句话，认为是<span class="lyq">周衰<a href="#shiguan">官失</a>，孔子陈<a href="#xianwang">后王</a>之法。</span>唐代颜师古《律历志》注：<span class="lyq">权，谓斤两也；量，斗<a href="#hu2">斛</a>也；法度，丈尺也。</span></span></span></p></li>
 <li><p><span class="lyterm">兴灭国，继绝世，举逸民</span>：振救恢复已被灭亡的国家，接续沿袭已断绝禄位的世家，征举任用避世隐居的贤人。</p></li>
 <li><p><span class="lyterm">说</span>：即说民，取悦于民。</p></li>
