--- a/aboly.html
+++ b/aboly.html
@@ -1395,7 +1395,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#3.16">3.16</a></div>
 <div class="lybloboriginaltext"><p>子曰：“射不主皮，为力不同科，古之道也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">射不主皮</span>：指<a href="#sheli">射礼</a>不以贯穿箭靶的皮革为目的，射中就好。主皮是习战之射，不主皮则是演礼之射。<span class="lyseealso"><span>【参】</span><span>《礼记·射义》：<span class="lyq">故射者，进退周还必<a href="#zhong4">中</a>礼。内志正，外体直，然后持弓矢审固；持弓矢审固，然后可以言中。此可以观德行矣。</span></span></span></p></li>
+<li><p><span class="lyterm">射不主皮</span>：指<a href="#sheli">射礼</a>不以贯穿箭靶的皮革为目的，射中就好。主皮是习战之射，不主皮则是演礼之射。<span class="lyseealso"><span>【参】</span><span>《礼记·射义》：<span class="lyq">故射者，进退周还必<a href="#zhong4">中</a>礼。内志正，外体直，然后持弓矢审固；持弓矢审固，然后可以言中。此可以观德行矣。</span>（审：固定，安定。）</span></span></p></li>
 <li><p><span class="lyterm">科</span>：等级，level。</p></li>
 <li><p><a id="guzhidao"></a><span class="lyterm">古</span>：古代。孔子心中所称许的“古”，泛一点是指夏、商、西周<a href="#sandai">三代</a>，专一点是指鼎盛时期的西周，<a href="#wu">武王</a>、<a href="#zhougong">周公</a>秉政，礼乐毕备<a href="#meishan">尽善尽美</a>的西周，它是孔子的理想寄托，就好像古希腊传说中人类的黄金时代（Golden Age）。与其将“古”视为无法企及的旧日荣光，不如理解成《礼记·<a href="#lijiliyun">礼运</a>》描述的天下为公、人尽其才的大同社会，处处洋溢着充实安乐的气氛。尽管孔子本人的政治实践不算成功，他勾勒的理想蓝图仍是后人的宝贵财富。</p></li>
 </ul></div>
@@ -1713,7 +1713,7 @@ img.characterimg {
 <a id="4.18"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#4.18">4.18</a></div>
 <div class="lybloboriginaltext"><p>子曰：“事父母几谏，见志不从，又敬不违，劳而不怨。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">几（<span class="lypinyin">jī</span>）<a href="#jian4c">谏</a></span>：含蓄轻微地劝谏，与直谏、力谏、<a href="#qie4b">切</a>谏相反。<a id="ji1b"></a><span class="lyterm">几</span>：隐微。<span class="lyexample"><span>【例】</span><span>成语“审几度势”（引申为苗头，迹象）。</span></span><span class="lyseealso"><span>【参】</span><span>《礼记·祭义》：<span class="lyq">孝子如执玉，如奉盈，洞洞属属然如弗胜，如将失之。严威<a href="#yan3">俨</a>恪，非所以事亲也，成人之道也。</span>（洞洞、属属（<span class="lypinyin">zhǔ</span>）：都是专心谨敬的样子。恪（<span class="lypinyin">kè</span>）：恭敬。）《孟子·万章上》：<span class="lyq">父母爱之，喜而不忘；父母恶之，劳而不怨。</span>（之：指子女。）《礼记·坊记》说，子女成年就应多尽孝心，而不该要求父母还像童年时那样慈爱待己：<span class="lyq">言<a href="#xiao4">孝</a>不言<a href="#ci2">慈</a>……民犹薄于孝而厚于慈。</span></span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">几（<span class="lypinyin">jī</span>）<a href="#jian4c">谏</a></span>：含蓄轻微地劝谏，与直谏、力谏、<a href="#qie4b">切</a>谏相反。<a id="ji1b"></a><span class="lyterm">几</span>：隐微。<span class="lyexample"><span>【例】</span><span>成语“审几度势”（引申为苗头，迹象。<a id="shen3"></a>审：细察，详究）。</span></span><span class="lyseealso"><span>【参】</span><span>《礼记·祭义》：<span class="lyq">孝子如执玉，如奉盈，洞洞属属然如弗胜，如将失之。严威<a href="#yan3">俨</a>恪，非所以事亲也，成人之道也。</span>（洞洞、属属（<span class="lypinyin">zhǔ</span>）：都是专心谨敬的样子。恪（<span class="lypinyin">kè</span>）：恭敬。）《孟子·万章上》：<span class="lyq">父母爱之，喜而不忘；父母恶之，劳而不怨。</span>（之：指子女。）《礼记·坊记》说，子女成年就应多尽孝心，而不该要求父母还像童年时那样慈爱待己：<span class="lyq">言<a href="#xiao4">孝</a>不言<a href="#ci2">慈</a>……民犹薄于孝而厚于慈。</span></span></span></p></li></ul></div>
 </div>
 <a id="4.19"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#4.19">4.19</a></div>
@@ -3620,11 +3620,11 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
 <p><span class="lyterm">色斯举矣，翔而后集</span>。本章疑有脱漏，难以确解。这个场景大概是，孔子和学生们经过一座山，看到一群<span class="lyterm">雉</span>（<span class="lypinyin">zhì</span>，野山鸡），孔子刚动了动表情没等说话，它们就敏感地飞上天，盘旋了一会才停聚到远处的山脊。<span class="lyterm">斯</span>：无意义的衬字。</p>
-<p><span class="lyseealso"><span>【参】</span><span>《韩诗外传》卷2第21章，引用这句话来评价<a href="#jieyu">接舆</a>之妻的敏锐。天下无道，接舆躬耕以食，楚王派使者重金聘他为官，接舆笑而不应。其妻从市集回来后问：<span class="lyq">先生少而为义，岂将老而遗之哉？门外车轶何其深也？</span>（轶（<span class="lypinyin">zhé</span>）：通“辙”，车轮印。）于是一起隐居避世。<span class="lyq">《论语》曰：“色斯举矣，翔而后集。”接舆之妻是也。</span></span></span></p>
-<p>后来，“翔而后集”形容名人贤士的动向招来众多追随者，又指学问上博览详察，综合采纳。<span class="lyexample"><span>【例】</span><span>《三国志·魏书·和洽传》裴松之注引《汝南先贤传》说，东汉末年名士许劭屡征不就，<span class="lyq">避乱江南，所历之国，必翔而后集。</span>唐代杜淹《文中子世家》载，文中子王通之父曾教诲他：<span class="lyq">“自天子至庶人，未有不<a href="#zi1a">资</a>友而成者也。……小子勉旃，翔而后集。”</span>于是王通求学四方，<span class="lyq">不解衣者六岁，其精志如此。</span>（旃（<span class="lypinyin">zhān</span>）：之，焉。）</span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span>《论语注疏》解释为：<span class="lyq">见颜色不善则去之……回翔<a href="#shen3">审</a>观而后下止。</span>《四书集注》进一步说：<span class="lyq">人之见<a href="#ji1b">几</a>而作，审择所处，亦当如此。</span>《韩诗外传》卷二第21章，引用这句话来评价<a href="#jieyu">接舆</a>之妻的敏锐。天下无道，接舆躬耕以食，楚王派使者重金聘他为官，接舆笑而不应。其妻从市集回来后问：<span class="lyq">先生少而为义，岂将老而遗之哉？门外车轶何其深也？</span>（轶（<span class="lypinyin">zhé</span>）：通“辙”，车轮印。）于是一起隐居避世。<span class="lyq">《论语》曰：“色斯举矣，翔而后集。”接舆之妻是也。</span></span></span></p>
+<p>后来，“色斯”就代指离去、隐遁。<span class="lyexample"><span>【例】</span><span>《三国志·魏书·崔琰（<span class="lypinyin">yǎn</span>）传》：<span class="lyq">哲人君子，俄有色斯之志。</span>（俄：瞬间，顿时。）</span></span>“翔而后集”形容名人贤士的动向引来众多追随者，又指学问上博览详察，综合采纳。<span class="lyexample"><span>【例】</span><span>《三国志·魏书·和洽传》裴松之注引《汝南先贤传》说，东汉末年名士许劭屡征不就，<span class="lyq">避乱江南，所历之国，必翔而后集。</span>唐代杜淹《文中子世家》载，文中子王通之父曾教诲他：<span class="lyq">“自天子至庶人，未有不<a href="#zi1a">资</a>友而成者也。……小子勉旃，翔而后集。”</span>于是王通求学四方，<span class="lyq">不解衣者六岁，其精志如此。</span>（旃（<span class="lypinyin">zhān</span>）：之，焉。）</span></span></p>
 <p><a id="jiandu"></a>从周朝到东汉发明造纸术以前，古代书籍多是将文字竖刻在竹片或木片上，再用线绳或牛皮绳横联起来，称为<span class="lykeyword">简牍</span>。由于制作保管不易，篇章首尾容易产生错乱混杂，相似的情况还有 <a href="#16.12" class="lyref">16.12</a> <a href="#16.14" class="lyref">16.14</a> <a href="#20.1" class="lyref">20.1</a> 。</p>
 </li>
-<li><p><span class="lyterm">时哉时哉</span>的感慨，可能是孔子自叹不遇其时，也可以理解为无法与世推移。<span class="lyseealso"><span>【参】</span><span><a href="#14.3" class="lyref">14.3</a> <a href="#16.11" class="lyref">16.11</a> </span></span></p></li>
+<li><p><span class="lyterm">时哉时哉</span>的感慨，可能是孔子自叹不遇其时，或者无法与世推移。<span class="lyseealso"><span>【参】</span><span><a href="#14.3" class="lyref">14.3</a> <a href="#16.11" class="lyref">16.11</a> </span></span></p></li>
 <li><p><span class="lyterm">共</span>（<span class="lypinyin">gǒng</span>）：通“拱”，拱手。也有说通“供”，指拿食物给它们吃，但结合第一句看似难说通。《吕氏春秋·季秋纪·审己》开头有<span class="lyq">子路掩雉而复释之</span>（掩：突袭式捕捉）的记载，或许和本章的情节有关。</p></li>
 <li><p><span class="lyterm">三嗅而作</span>：也许是这些野山鸡闻了几下，又飞起来了。闻的是什么已不可考，但不难意会野生动物特有的警惕性。也有认为“嗅”应为“嘎”，即鸟鸣。又有根据扬雄《法言·五百》（“五臣注本”）中“雉噫”一语，认为“嗅”应作<a href="#yi1a">噫</a>，推测本章发生在<a href="#qirenkuinvyue">齐人归女乐</a>之后，孔子离开鲁国的途中，看到雌雉触动了心事，再三叹息之后站起身来。然而更早的“李轨注本”无“雉”字。</p></li>
 </ul></div>
@@ -6529,7 +6529,7 @@ img.characterimg {
 <p><span class="lybook">《论语本解》</span>，孙钦善著，三联书店，2009年。注释精准，各章之间经常提供交叉引用，5个附论也各有价值。2013年三联书店出了修订版。</p>
 <p><span class="lybook">《论语今注今译》</span>，毛子水注译，重庆出版社，2009年。原属台湾商务印书馆“古籍今注今译丛书”的一种，1975年出版，1984年作者校订再版，在海外具有广泛持久的影响。它的大部分注释选自合适的古注，辅以按语，另有不少生动活泼的议论，遇到难理解或争议大的就直接写明，读起来既顺畅又踏实。该丛书由上海商务印书馆前总经理（1930—1945）、台湾商务印书馆前董事长（1964—1979）王云五先生主编，共出版约60种。</p>
 <p><span class="lybook">《论语通译》</span>（修订版），徐志刚译注，人民文学出版社，语文新课标必读丛书，2006年。发行量较大，简明清通，但似乎过于简化，疏漏略多。</p>
-<p><a id="lunyuzhushu"></a><span class="lybook">《论语注疏》</span>，〔魏〕何晏等集解，〔梁〕皇侃义疏，〔北宋〕邢昺正义，梁运华整理，山东画报出版社，四库家藏丛书，2004年。</p>
+<p><a id="lunyuzhushu"></a><span class="lybook">《论语注疏》</span>，〔魏〕何晏等集解，〔梁〕皇侃义疏，〔北宋〕邢昺正义，梁运华整理，山东画报出版社，四库家藏丛书，2004年。书前“提要”说：<span class="lyq">三国时，魏何晏等五人集孔安国、包咸、周氏、马融、郑玄、陈群、王肃和周生烈等对《论语》的解说，择善而从，成《论语集解》。梁皇侃对《集解》进行疏解，成《论语义疏》。宋咸平二年（公元999年），邢昺遵诏改定皇侃《义疏》，其删繁就简，增加对义理的阐述，终成《论语正义》二十卷，又名《论语注疏》。</span></p>
 <p><span class="lybook">《四书集注》</span>，〔南宋〕朱熹集注，陈戍国标点，岳麓书社，2004年。</p>
 <p><a id="lunyujishi"></a><span class="lybook">《论语集释》</span>，程树德撰，中华书局，中华国学文库，2013年。本书可称《论语》注解大全，分类集成了从汉至清各家学者的研究心得，引书680种，并加按语，方便后人系统了解各种诠释与引申，至可感佩。或有讥为取舍不尽精当，敢问更精者何在？其《自序》称：<span class="lyq">夫文化者国家之生命，思想者人民之倾向，教育者立国之根本，凡爱其国者，未有不爱其国之文化。</span>可与钱穆先生《国史大纲》的开篇“凡读本书请先具下列诸信念”对读。</p>
 <p><span class="lybook">《唐写本论语郑氏注及其研究》</span>，王素编著，文物出版社，1991年。</p>
