--- a/aboly.html
+++ b/aboly.html
@@ -2388,7 +2388,7 @@ img.characterimg {
 <li><p><a id="ji4"></a><span class="lyterm">济</span>：救助。<span class="lyexample"><span>【例】</span><span>成语“济世救人”。</span></span><span class="lyseealso"><span>【参】</span><span>《孟子·梁惠王下》：<span class="lyq">乐民之乐者，民亦乐其乐；忧民之忧者，民亦忧其忧。乐以天下，忧以天下，然而不<a href="#wangdao">王</a>者，未之有也。</span></span></span></p></li>
 <li><p><span class="lyterm">何事于仁</span>：和仁有什么关系呢，意即怎么能说（只）是仁呢。<span class="lyterm">何事于</span>是用反问结构表示否定，have nothing to do with。</p></li>
 <li>
-<p><a id="sheng4"></a><span class="lyterm">圣</span>：睿智通达、无所不晓的人，引申指道德才能达到超凡境界的人。<span class="lyseealso"><span>【参】</span><span>《尚书·周书·洪范》：<span class="lyq">视曰明，听曰聪，思曰睿。……明作晰，聪作谋，睿作圣。</span>（作：则。）</span></span></p>
+<p><a id="sheng4"></a><span class="lyterm">圣</span>：睿智通达、无所不晓的人，引申指道德才能达到超凡境界的人。<span class="lyseealso"><span>【参】</span><span>《尚书·周书·洪范》：<span class="lyq">视曰明，听曰聪，思曰睿。……明作晰，聪作谋，睿作圣。</span>（作：则。）宋代吕本中《童蒙训》记其祖父吕希哲语：<span class="lyq">惟<a href="#tianzi">天子</a>为能<a href="#bei4a">备</a>物，惟圣人为能备德。</span></span></span></p>
 <p>根据孔子之意，<a href="#ren2">仁</a>是凡夫俗子能达到的最高境界，所关爱的范围毕竟有限；圣是更进一步的理想化境界，要做到博施济众，连上古贤君都力有未逮。这就激励着历代儒者在修身向学之外积极投身政治，为大众谋福利。</p>
 <p>儒家经典中，圣一般特指<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#yu">禹</a>、<a href="#tang">汤</a>、<a href="#wen">文</a>、<a href="#wu">武</a>、<a href="#zhougong">周公</a>和孔子，后来又专称孔子为圣人，尊为<span class="lykeyword">至圣先师</span>。</p>
 </li>
@@ -4135,7 +4135,7 @@ img.characterimg {
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize"><li>
 <p><span class="lyterm">偃</span>（<span class="lypinyin">yǎn</span>）：仰倒，泛指倒下。相对地，仆（<span class="lypinyin">pū</span>）为脸朝下而倒，也泛指倒下。<span class="lyterm">草上之风必偃</span>：风从草上吹过，草自然顺风而倒。这个比喻表明了孔子的政治思想：上位者的身份要求他们努力提高自身道德修养，成为公众的表率，而不应漠视教化、滥用刑罚，这样才能达到 <a href="#2.1" class="lyref">2.1</a> <span class="lyq">众星共之</span>的效果。</p>
-<p>这句话可能是“风化”一词的来源，另外“靡然”也是以草木顺风偃伏来形容闻风而动、群集响应，褒义贬义皆可。<span class="lyexample"><span>【例】</span><span>《隋书·李谔传》：<span class="lyq">四海靡然向风，深<a href="#ge2">革</a>其弊。</span>《明史·王璟传》：<span class="lyq">时群小用事，大臣靡然附之，璟独守故操。</span></span></span></p>
+<p>这句话可能是“风化”一词的来源，另外“靡然”也是以草木顺风偃伏来形容闻风而动、群集响应，褒义贬义皆可。<span class="lyexample"><span>【例】</span><span>吕本中《童蒙训》：<span class="lyq">〔程颢、程颐〕以圣学为己任，学者靡然从之，当时谓之“二程”。</span>《明史·王璟传》：<span class="lyq">时群小用事，大臣靡然附之，璟独守故操。</span></span></span></p>
 <p><span class="lyseealso"><span>【参】</span><span><a href="#2.3" class="lyref">2.3</a> 。后来“上行下效”的观念一直深入人心。《孟子·离娄上》：<span class="lyq">惟仁者宜在高位。不仁而在高位，是播其恶于众也。</span>《后汉书·吕强传》吕强上疏所引尸子：<span class="lyq">君如<a href="#yu2c">杅</a>，民如水。杅方则水方，杅圆则水圆。</span>君民如此，君臣亦如此。《资治通鉴·唐太宗贞观元年》（627年）载：<span class="lyq">有上书请去<a href="#ning4">佞</a>臣者。上问：“佞臣为谁？”对曰：“臣居草泽，不能的知其人，愿陛下与群臣言，或阳怒以试之。彼执理不屈者，直臣也；畏威顺旨者，佞臣也。”上曰：“君，源也；臣，流也。浊其源而求其流之清，不可得矣。君自为诈，何以<a href="#ze2a">责</a>臣下之直乎！朕方以至诚治天下，见前世帝王好以<a href="#quan2">权</a><a href="#ju2a">谲</a>小数接其臣下者，常窃耻之。卿策虽善，朕不取也。”</span>（的（<span class="lypinyin">dí</span>）：确。阳：假装。小数：小手段，花招。接：交往，对待。）</span></span></p>
 </li></ul></div>
 </div>
@@ -4464,7 +4464,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“君子易事而难说也。说之不以道，不说也；及其使人也，器之。小人难事而易说也。说之虽不以道，说也；及其使人也，求备焉。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm"><a href="#qi4">器</a>之</span>：指以其器用之，根据才具能力合理分配任务。</p></li>
-<li><p><span class="lyterm">求备</span>：指（什么事情都）苛求做得妥善周到。<span class="lyterm">备</span>：齐全，完备。<span class="lyexample"><span>【例】</span><span>成语“求全<a href="#ze2a">责</a>备”指对人或对事要求完美无缺。</span></span></p></li>
+<li><p><span class="lyterm">求备</span>：指（什么事情都）苛求做得妥善周到。<a id="bei4a"></a><span class="lyterm">备</span>：齐全，完备。<span class="lyexample"><span>【例】</span><span>成语“求全<a href="#ze2a">责</a>备”指对人或对事要求完美无缺。</span></span></p></li>
 </ul></div>
 </div>
 <a id="13.26"></a><div class="lyblob">
@@ -4902,7 +4902,7 @@ img.characterimg {
 <li><p><span class="lyterm">肆诸市朝</span>：把他陈尸于市集，就是说除掉公伯寮。<span class="lyterm">肆</span>：处以死刑后陈尸示众。据郑玄注，大夫及以上肆于朝廷，士及以下肆于市集（弃市）。公伯寮是士，所以<span class="lyterm">市朝</span>偏指市集。</p></li>
 </ul>
 <div class="lyseealso">
-<p><span>【参】</span><span>先道义而后功利，是儒家传统的显著特征，<a href="#13.3" class="lyref">13.3</a>  子路才会埋怨<span class="lyq">有是哉，子之迂也！</span>据《汉书·董仲舒传》，董仲舒曾任江都易王之相，易王为汉武帝兄，<span class="lyq">素骄，好勇，仲舒以礼<a href="#yi4j">谊</a><a href="#kuang1">匡</a>正，王敬重焉。</span>相处既久，易王以<a href="#qihuangong">桓公</a>、<a href="#guanzhong">管仲</a>自比与仲舒的关系，<span class="lyq">仲舒对曰：“臣愚，不足以奉大王对。……夫仁人者，正其谊不谋其利，明其道不计其功，是以仲尼之门，<a href="#liuchizhigu">五尺之童</a>羞称五<a href="#badao">伯</a>，为其先诈力而后仁谊也。……”王曰：“善！”</span></span></p>
+<p><span>【参】</span><span>先道义而后功利，是儒家传统的显著特征，<a href="#13.3" class="lyref">13.3</a>  子路才会埋怨<span class="lyq">有是哉，子之迂也！</span>《汉书·董仲舒传》载，董仲舒曾任江都易王之相，易王为汉武帝兄，<span class="lyq">素骄，好勇，仲舒以礼<a href="#yi4j">谊</a><a href="#kuang1">匡</a>正，王敬重焉。</span>相处既久，易王以<a href="#qihuangong">桓公</a>、<a href="#guanzhong">管仲</a>自比与仲舒的关系，<span class="lyq">仲舒对曰：“臣愚，不足以奉大对。……夫仁人者，正其谊不谋其利，明其道不计其功，是以仲尼之门，<a href="#liuchizhigu">五尺之童</a>羞称五<a href="#badao">伯</a>，为其先诈力而后仁谊也。……”王曰：“善！”</span>（大对：回答帝王的垂询，又指科举殿试。）</span></p>
 <p>清初张尔岐《蒿庵闲话》认为：<span class="lyq">人道之当然而不可违者，义也；天道之本然而不可争者，命也。……命不可知，君子当以义知命矣。凡义所不可，即以为命所不有也。……君子以义安命，故其心常泰。小人以智力争命，故其心多怨。众人之于命，亦有安之矣，大约皆知其无可奈何而后安之者也。圣人之于命，安之矣，实不以命为准也，而以义为准。故虽力有可争，势有可图，而退然处之，曰义之所不可也。义所不可，斯曰命矣。</span></p>
 <p>思考：依靠不正当的手段获取“第一桶金”，然后努力“洗白”，你知道这样的例子吗？其他诸子各家持什么观点？你更认同哪种？</p>
 </div>
