Regular update. Update ly-tts link to v0.3.0d.

--- a/aboly.html
+++ b/aboly.html
@@ -924,7 +924,8 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“吾十有五而志于学，三十而立，四十而不惑，五十而知天命，六十而耳顺，七十而从心所欲不逾矩。”</p></div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
-<li><p><a id="erli"></a><span class="lyterm">立</span>：立身，自立，指学问上有所成就，能够创造价值、自食其力。据《左传·昭公七年》，孟僖子临终前嘱咐儿子<a href="#mengyizi">孟懿子</a>向孔子学礼，孔子时年34岁，就已名声在外了。也有把“立”解释为 <a href="#7.6" class="lyref">7.6</a>  立志求道、<a href="#8.8" class="lyref">8.8</a> <span class="lyq">立于礼</span>等。<span class="lyseealso"><span>【参】</span><span>英国生物学家赫胥黎（Thomas Henry Huxley）1892年写给友人之子的一封信上说：<span class="lyqe">In my opinion a man's first duty is to find a way of supporting himself, thereby relieving other people of the necessity of supporting him.</span>（<span class="lyq">我认为做人的第一要务是想办法来自食其力，而不用依靠别人去撑持他。</span>）</span></span></p></li>
+<li><p><span class="lyterm">有</span>（<span class="lypinyin">yòu</span>）：通“又”，连接整数和零头。<span class="lyexample"><span>【例】</span><span><a href="#10.6" class="lyref">10.6</a> <span class="lyq">必有寝衣，长一身有半。</span></span></span></p></li>
+<li><p><a id="erli"></a><span class="lyterm">立</span>：自立，指学问等方面有所成就，作为有用之人，在世上站得住脚。据《左传·昭公七年》，孟僖子临终前嘱咐儿子<a href="#mengyizi">孟懿子</a>向孔子学礼，孔子时年34岁，就已名声在外了。也有把“立”解释为 <a href="#7.6" class="lyref">7.6</a>  立志求道、<a href="#8.8" class="lyref">8.8</a> <span class="lyq">立于礼</span>等。<span class="lyseealso"><span>【参】</span><span><a href="#9.23" class="lyref">9.23</a> <span class="lyq">四十、五十而无闻焉，斯亦不足畏也已。</span>英国生物学家赫胥黎（Thomas Henry Huxley）1892年给友人之子的信上说：<span class="lyqe">In my opinion a man's first duty is to find a way of supporting himself, thereby relieving other people of the necessity of supporting him.</span>（<span class="lyq">我认为做人第一要务是想办法自食其力，而不非得靠别人帮衬他。</span>）</span></span></p></li>
 <li><p><span class="lyterm">不惑</span>：遇到事情能明辨是非而不迷惑。<span class="lyterm">惑</span>：糊涂，迷乱。</p></li>
 <li><p><a id="tianming"></a><span class="lyterm">天命</span>：<a href="#shangdi">上天</a>的旨意和安排。对于个人而言，就是冥冥中已经决定的命运，既有宿命（destiny）也有使命（duty）的意味。<a id="ming4"></a><span class="lyterm">命</span>：本义为上对下的指令，“命里注定”的祸福吉凶，是它的后起义，相当于天命的简称。<span class="lyexample"><span>【例】</span><span><a href="#12.5" class="lyref">12.5</a> <span class="lyq">死生有命，富贵在天。</span>后来又有成语“听天由命”。</span></span><span class="lyseealso"><span>【参】</span><span>《孟子·万章上》，孟子对天、命的理解是：<span class="lyq">莫之为而为者，天也；莫之致而至者，命也。</span>（<a href="#zhi4b">致</a>：使到来，招引。）《汉书·董仲舒传》引董仲舒策对：<span class="lyq">命者，天之令也。</span>清代刘宝楠《论语正义》：<span class="lyq">命者，立之于己而受之于天，圣人所不敢辞也。</span></span></span></p></li>
 <li><p><span class="lyterm">耳顺</span>：耳朵顺合于话语，即自然而然就能准确地领会别人话中的含义，另外也有多从积极的方面理解别人的话、兼收并蓄的意思。</p></li>
@@ -1684,7 +1685,7 @@ img.characterimg {
 <li><p><a id="yiyiguanzhi"></a><span class="lyterm">一以贯之</span>：“以一贯之”的倒装，一个基本道理贯通它的全部内容。古注常用绳串铜钱的比喻来解释，用现代的话说，就是既有体系规模，又有中心思想。我们日常学习、处事，也就是把未知和已知、理论和实践不断联系融合，获得“自成一体”的快乐。</p></li>
 <li><p><span class="lyterm">唯</span>：表示同意的答应声，相当于是的，yes。参见<a href="#nuo4">诺</a>。<span class="lyexample"><span>【例】</span><span>成语“唯唯诺诺”指人一味应声附和，而不发表自己的意见。</span></span></p></li>
 <li>
-<p><a id="menren"></a><span class="lyterm">门人</span>：弟子，学生。古代以登师<span class="lyterm">门</span>求学为礼。<span class="lyseealso"><span>【参】</span><span>《礼记·曲礼上》：<span class="lyq">礼闻来学，不闻往教。</span>孔颖达疏：<span class="lyq">凡学之法，当就其师，处<a href="#nanmian">北面</a>伏<a href="#ying1">膺</a>。……不可以屈师亲来就己。</span>《仪礼·士相见礼》唐代贾公彦疏：<span class="lyq">学生事师，虽无<a href="#wufu">服</a>，有父兄之恩，故称弟子也。</span></span></span></p>
+<p><a id="menren"></a><span class="lyterm">门人</span>：弟子，学生。古代以登师<span class="lyterm">门</span>求学为礼，进了老师的家门，就像是家中<a href="#dizi">子弟</a>，老师就相当于父兄了。<span class="lyseealso"><span>【参】</span><span>《礼记·曲礼上》：<span class="lyq">礼闻来学，不闻往教。</span>孔颖达疏：<span class="lyq">凡学之法，当就其师，处<a href="#nanmian">北面</a>伏<a href="#ying1">膺</a>。……不可以屈师亲来就己。</span>《仪礼·士相见礼》唐代贾公彦疏：<span class="lyq">学生事师，虽无<a href="#wufu">服</a>，有父兄之恩，故称弟子也。</span></span></span></p>
 <p>《论语》中没有直接标明的门人，都是指孔子的弟子。<a href="#8.3" class="lyref">8.3</a>  的“门弟子”指曾子的弟子。</p>
 </li>
 <li><p><a id="shu4"></a><span class="lyterm">恕</span>：推己及人。从字形结构看，可以理解为视人心如己心。更精准的解释是 <a href="#15.24" class="lyref">15.24</a> <span class="lyq">己所不欲，勿施于人。</span>《说文解字》直接解释为仁，也就是“恕”的正向表现：<a href="#6.30" class="lyref">6.30</a> <span class="lyq">己欲立而立人，己欲达而达人。</span><span class="lyseealso"><span>【参】</span><span>《尸子·恕》：<span class="lyq">恶<a href="#zhu1">诸</a>人，则去诸己；欲诸人，则求诸己——此恕也。</span></span></span></p></li>
@@ -3415,7 +3416,7 @@ img.characterimg {
 <li><p><span class="lyterm">亵裘长，短右袂</span>（<span class="lypinyin">mèi</span>）：居家穿的皮裘（下摆）做得要长，右袖要短一些。下摆长保暖好，右袖短可能是为了右手（惯用手）做事方便。</p></li>
 <li><p><span class="lyterm">以居</span>：指当坐垫。<a id="ju1a"></a><span class="lyterm">居</span>：闲坐，这是其本义。</p></li>
 <li><p><span class="lyterm">去丧，无所不佩</span>：服满丧期脱掉丧服后，就可以任意佩戴饰物了。</p></li>
-<li><p><span class="lyterm">非帷裳，必杀之</span>：只要不是朝祭的礼服，多余的布就应裁掉。<span class="lyterm">帷裳</span>：朝拜或祭祀时穿的礼服，用整幅布做成，多余的布也不裁掉，而是缝成褶边。</p></li>
+<li><p><span class="lyterm">非帷裳，必杀（<span class="lypinyin">shài</span>）之</span>：只要不是朝祭的礼服，多余的布就应裁掉。<span class="lyterm">帷裳</span>：朝拜或祭祀时穿的礼服，用整幅布制成，多出来的布料被缝成褶边。<span class="lyterm">杀</span>：裁去，减省（多余部分），cut down。现代口语的“杀价”、“杀威风”，也是从这个含义而来，只是读音简并了。</p></li>
 <li><p><span class="lyterm">羔裘玄冠不以吊</span>：不能穿着黑羊羔皮裘、戴着黑色礼帽去吊丧。在古代，黑是庄重的吉色，白代表丧事。</p></li>
 <li><p><span class="lyterm">吉月</span>：农历每月初一。</p></li>
 </ul></div>
@@ -3740,7 +3741,7 @@ img.characterimg {
 </div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize"><li><p><a id="gan3"></a><span class="lyterm">敢</span>：表示自谦，相当于冒昧地，斗胆。<span class="lyexample"><span>【例】</span><span><a href="#20.1" class="lyref">20.1</a> <span class="lyq">予小子履，敢用玄牡。</span></span></span></p></li></ul>
-<p>孔子对于鬼神，既不明确否定，也不强调它们的存在，更关心的是人间<a href="#junchenfuzi">伦常</a>。<span class="lyseealso"><span>【参】</span><span><a href="#1.9" class="lyref">1.9</a> <a href="#3.12" class="lyref">3.12</a> 。《说苑·辨物》：<span class="lyq"><a href="#zigong">子贡</a>问孔子：“死人有知无知也？”孔子曰：“吾欲言死者有知也，恐孝子顺孙妨生以送死也；欲言无知，恐不孝子孙弃不葬也。<a href="#zigong">赐</a>，欲知死人有知将无知也？死徐自知之，犹未晚也。”</span>（妨生以送死：妨害生者的生活，即过度破费，来给死者送终。将（<span class="lypinyin">jiāng</span>）：连词，或。徐：缓慢，慢慢地。）</span></span></p>
+<p>孔子对于鬼神，没有明确否定，也不强调其存在，他更关心的是人间<a href="#junchenfuzi">伦常</a>。<span class="lyseealso"><span>【参】</span><span><a href="#1.9" class="lyref">1.9</a> <a href="#3.12" class="lyref">3.12</a> 。《说苑·辨物》：<span class="lyq"><a href="#zigong">子贡</a>问孔子：“死人有知无知也？”孔子曰：“吾欲言死者有知也，恐孝子顺孙妨生以送死也；欲言无知，恐不孝子孙弃不葬也。<a href="#zigong">赐</a>，欲知死人有知将无知也？死徐自知之，犹未晚也。”</span>（妨生以送死：妨害生者的生活，即过度破费，来给死者送终。将（<span class="lypinyin">jiāng</span>）：连词，或。徐：缓慢，慢慢地。）</span></span></p>
 </div>
 </div>
 <a id="11.13"></a><div class="lyblob">
@@ -5908,9 +5909,9 @@ img.characterimg {
 <li><p><span class="lyterm"><a href="#bi4c">辟</a>人之士</span>指四处寻访明君而不得的孔子，<span class="lyterm">辟世之士</span>指长沮、桀溺这样远离尘嚣的隐士。</p></li>
 <li><p><span class="lyterm">耰</span>（<span class="lypinyin">yōu</span>）：农具名，用来槌碎土块，平整田地，这里作动词，用耰整地。</p></li>
 <li><p><span class="lyterm">怃（<span class="lypinyin">wǔ</span>）然</span>：伤感失意的样子。</p></li>
-<li><p><span class="lyterm">鸟兽不可与同群，吾非斯人之徒与而谁与？</span>：（人）不能和鸟兽为伍，我不跟那些人在一起还能跟谁呢？<span class="lyterm">斯人之徒</span>：指世间人，也包括君主政客之流，与避世隐居的世外之人相对。宁愿生活在不完美的世界里，也不否定自己作为社会人的价值、退回不问俗事的生活，反映了儒家积极入世的态度和慈悲仁爱的精神。</p></li>
+<li><p><span class="lyterm">鸟兽不可与同群，吾非斯人之徒与而谁与？</span>：（人）不能和鸟兽为伍，我不跟那些人在一起还能跟谁呢？<span class="lyterm">斯人之徒</span>：指世间人，也包括君主政客之流，与避世隐居的世外之人相对。宁愿生活在不完美的世界，也不否定自己作为社会人的价值、退回不问俗事的生活，反映了儒家积极入世的态度和慈悲仁爱的精神。这和佛教寻求解脱轮回，道教向往长生成仙，以及基督教、伊斯兰教宣扬的天堂，都有极大不同。</p></li>
 <li><p><span class="lyterm">天下有道</span>：即天下若有道，是假设之辞，这也就没什么好改变的了。这个实现自我价值的信念，可以说是支持孔子四处奔波的力量。</p></li>
-<li><p><span class="lyterm">与易</span>：和（这些人）来改变，省略了“与”的宾语“斯人之徒”。孔子认为，和不完美的人合作，也能够实现伟大的理想。这是必须接受的现实，也是他爱人、相信人的一贯态度。</p></li>
+<li><p><span class="lyterm">与易</span>：和（这些人）来改变，省略了“与”的宾语“斯人之徒”。孔子认为，和不完美的人合作，也能够实现伟大的理想。这是必须接受的现实，也是他爱人、相信人的一贯态度。更何况，<a href="#9.23" class="lyref">9.23</a> <span class="lyq">后生可畏，焉知来者之不如今也？</span></p></li>
 </ul></div>
 </div>
 <a id="18.7"></a><div class="lyblob">
@@ -6534,10 +6535,10 @@ img.characterimg {
 <a id="references-lunyu"></a><h2>论语相关</h2>
 <p><a id="lunyuyizhu"></a><span class="lybook">《论语译注》</span>（第2版），杨伯峻译注，中华书局，1980年。这应该是解放后中国大陆最流行的《论语》读本，初版于1958年，注释翔实，包含很多对古汉语的独到体会。可惜限于时代，作者谨守语言学家的界限，难以畅达地阐述各章内涵，另外也有一些小错。2006年中华书局出了简体字本，2009年岳麓书社出了杨先生堂侄杨逢彬负责的修订重版。奇怪的是，它们把原本颇具特色的“试论孔子”、“论语词典”等删掉，只留下光溜溜的20篇。我觉得，往往是这样推陈出新的地方，才体现作者的功力，才对读者更有用。幸好2015年中华书局典藏版复其原貌。</p>
 <p><span class="lybook">《论语新解》</span>，钱穆著，三联书店，钱穆作品系列，2002年。本书以浅近精实的文言文写成，字词的注释要言不烦，着重于“心解”每一章的意义，反复阐述修身治学之道，在现代注本中占有不可替代的地位。</p>
-<p><span class="lybook">《论语本解》</span>，孙钦善著，三联书店，2009年。注释精准，各章之间经常提供交叉引用，5个附论也各有价值。2013年三联书店出了修订版。</p>
+<p><span class="lybook">《论语本解》</span>，孙钦善著，三联书店，2009年。注释精准，各章之间经常提供交叉引用，5个附论也各有价值。2013年出修订版。</p>
 <p><span class="lybook">《论语今注今译》</span>，毛子水注译，重庆出版社，2009年。原属台湾商务印书馆“古籍今注今译丛书”的一种，1975年出版，1984年作者校订再版，在海外具有广泛持久的影响。它的大部分注释选自合适的古注，辅以按语，另有不少生动活泼的议论，遇到难理解或争议大的就直接写明，读起来既顺畅又踏实。该丛书由上海商务印书馆前总经理（1930—1945）、台湾商务印书馆前董事长（1964—1979）王云五先生主编，共出版约60种。</p>
 <p><span class="lybook">《论语通译》</span>（修订版），徐志刚译注，人民文学出版社，语文新课标必读丛书，2006年。发行量较大，简明清通，但似乎过于简化，疏漏略多。</p>
-<p><a id="lunyuzhushu"></a><span class="lybook">《论语注疏》</span>，〔魏〕何晏等集解，〔梁〕皇侃义疏，〔北宋〕邢昺正义，梁运华整理，山东画报出版社，四库家藏丛书，2004年。书前“提要”说：<span class="lyq">三国时，魏何晏等五人集孔安国、包咸、周氏、马融、郑玄、陈群、王肃和周生烈等对《论语》的解说，择善而从，成《论语集解》。梁皇侃对《集解》进行疏解，成《论语义疏》。宋咸平二年（公元999年），邢昺遵诏改定皇侃《义疏》，其删繁就简，增加对义理的阐述，终成《论语正义》二十卷，又名《论语注疏》。</span></p>
+<p><a id="lunyuzhushu"></a><span class="lybook">《论语注疏》</span>，〔魏〕何晏等集解，〔梁〕皇侃义疏，〔北宋〕邢昺正义，梁运华整理，山东画报出版社，四库家藏丛书，2004年。儒家“十三经注疏”之一，汉唐经学的总结，朱熹《四书集注》之前的通行注本。书前“提要”介绍：<span class="lyq">三国时，魏何晏等五人集孔安国、包咸、周氏、马融、郑玄、陈群、王肃和周生烈等对《论语》的解说，择善而从，成《论语集解》。梁皇侃对《集解》进行疏解，成《论语义疏》。宋咸平二年（公元999年），邢昺遵诏改定皇侃《义疏》，其删繁就简，增加对义理的阐述，终成《论语正义》二十卷，又名《论语注疏》。</span>因清儒刘宝楠也有《论语正义》，为清代经学的结晶，故本书多称《论语集解》或《论语注疏》。</p>
 <p><span class="lybook">《四书集注》</span>，〔南宋〕朱熹集注，陈戍国标点，岳麓书社，2004年。</p>
 <p><a id="lunyujishi"></a><span class="lybook">《论语集释》</span>，程树德撰，中华书局，中华国学文库，2013年。本书可称《论语》注解大全，分类集成了从汉至清各家学者的研究心得，引书680种，并加按语，方便后人系统了解各种诠释与引申，至可感佩。或有讥为取舍不尽精当，敢问更精者何在？其《自序》称：<span class="lyq">夫文化者国家之生命，思想者人民之倾向，教育者立国之根本，凡爱其国者，未有不爱其国之文化。</span>可与钱穆先生《国史大纲》的开篇“凡读本书请先具下列诸信念”对读。</p>
 <p><span class="lybook">《唐写本论语郑氏注及其研究》</span>，王素编著，文物出版社，1991年。</p>
